[gd_scene load_steps=6 format=3 uid="uid://c652qcfsxjftw"]

[ext_resource type="Script" path="res://mainScript.gd" id="1_feb5d"]
[ext_resource type="PackedScene" uid="uid://de2c0ef68vwfn" path="res://map.tscn" id="3_feb5d"]
[ext_resource type="PackedScene" uid="uid://cgbputpuirplf" path="res://punishments/sign.tscn" id="3_qjwx7"]
[ext_resource type="PackedScene" uid="uid://csjjb6f0y64pc" path="res://custom_hz.tscn" id="3_yyuat"]
[ext_resource type="PackedScene" uid="uid://wlrqjj5o6q5m" path="res://punishments/StopZone.tscn" id="5_rwu7r"]

[node name="Node2D" type="Node2D"]
position = Vector2(45, 99)
script = ExtResource("1_feb5d")

[node name="map" parent="." instance=ExtResource("3_feb5d")]
position = Vector2(2879, -314)
scale = Vector2(6.5, 6.5)

[node name="Luksofors" parent="map" instance=ExtResource("5_rwu7r")]
position = Vector2(-496, 240.308)
rotation = -0.228085
scale = Vector2(0.153846, 0.153846)

[node name="Sign" parent="map" instance=ExtResource("3_qjwx7")]
position = Vector2(-332.923, 274.308)

[node name="Sign2" parent="map" instance=ExtResource("3_qjwx7")]
position = Vector2(-576.154, -174.769)

[node name="Sign3" parent="map" instance=ExtResource("3_qjwx7")]
position = Vector2(532.462, 269.077)

[node name="Sign4" parent="map" instance=ExtResource("3_qjwx7")]
position = Vector2(471.538, -37.8462)

[node name="Sign5" parent="map" instance=ExtResource("3_qjwx7")]
position = Vector2(-618.769, -410.462)

[node name="Sign6" parent="map" instance=ExtResource("3_qjwx7")]
position = Vector2(-524.154, -0.307686)

[node name="Sign7" parent="map" instance=ExtResource("3_qjwx7")]
position = Vector2(-643.385, -45.2308)

[node name="Sign8" parent="map" instance=ExtResource("3_qjwx7")]
position = Vector2(-547.385, 297.846)

[node name="Custom_hz" parent="." instance=ExtResource("3_yyuat")]
position = Vector2(204, -297)

[connection signal="punish" from="map/Luksofors" to="Custom_hz" method="_on_luksofors_punish"]
[connection signal="punish" from="map/Sign" to="Custom_hz" method="_on_sign_punish"]
[connection signal="punish" from="map/Sign2" to="Custom_hz" method="_on_sign_punish"]
[connection signal="punish" from="map/Sign3" to="Custom_hz" method="_on_sign_punish"]
[connection signal="punish" from="map/Sign4" to="Custom_hz" method="_on_sign_punish"]
[connection signal="punish" from="map/Sign5" to="Custom_hz" method="_on_sign_punish"]
[connection signal="punish" from="map/Sign6" to="Custom_hz" method="_on_sign_punish"]
[connection signal="punish" from="map/Sign7" to="Custom_hz" method="_on_sign_punish"]
[connection signal="punish" from="map/Sign8" to="Custom_hz" method="_on_sign_punish"]
